--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,17 @@ dev_dependencies:
   flutter_page_lifecycle:
   dotted_line:
   url_launcher:
+  skeletons: ^0.0.3
+  share_plus: ^7.2.1
+  widgets_to_image: ^0.0.2
+  shared_preferences:
+  share_files_and_screenshot_widgets:
+  image_gallery_saver: '^2.0.3'
+  modal_bottom_sheet:
+    git:
+      url: https://github.com/followthemoney1/modal_bottom_sheet.git
+      ref: main
+      path: modal_bottom_sheet
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -106,6 +117,8 @@ flutter:
      - assets/lotties/
      - assets/icons/active_biometrics.png
      - assets/icons/lockFill.png
+     - assets/png/icons/tick_icon.png
+     - assets/png/icons/upload.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
