account creation fix

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 #example .env file
+BASEURL=http://41.78.157.3
+API_GATEWAY=/MoneyTronics.API/api/
+API_KEY=YpIaT6Crq+sGH13RB1q6aA==
+HMAC_KEY=lM97ez5aC0taf/qj5VLCIQ==
+AES_KEY=ZpJFemkqxFmkyvEZW/8xSA==
